<resources>
    <string name="app_name">FoodApp</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="my_profile">MY Profile</string>
    <string name="favourites">Favourites</string>
    <string name="food_runner">Food Runner</string>
    <string name="open_drawer">OpenDrawer</string>
    <string name="close_drawer">CloseDrawer</string>
    <string name="dishname">DishName</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="_4_5">4.555</string>
    <string name="rs_300">Rs.300</string>
    <string name="sl_no">Sl No.</string>
    <string name="menu_item">Menu Item</string>
    <string name="rs_500">Rs.500</string>
    <string name="add_to_fav">Add to fav</string>
    <string name="add">Add</string>
    <string name="choose_from_menu_listed_below">Choose From menu listed below:</string>
    <string name="enter_email">  Email</string>
    <string name="password">  Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="username">Username</string>
    <string name="mobile_number_10_digits">Mobile number (10 digits)</string>
    <string name="delivery_address">Delivery address</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_your_registered_mobile_number_and_email_bellow">Enter your registered Mobile number and email bellow:</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="enter_your_otp_and_reset_password">Enter your OTP and reset password:</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="new_password">New password</string>
    <string name="sort">Sort</string>
    <string name="cart">Cart</string>
    <string name="order_history">Order History</string>
    <string name="ordering_from">Ordering from:</string>
    <string name="food_app">Food App</string>
    <string name="todo">TODO</string>
</resources>