<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">

    <item android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        />
    <item android:title="@string/my_profile"
        android:id="@+id/myProfile"
        android:icon="@drawable/ic_profile"
        />
    <item android:title="@string/favourites"
       android:id="@+id/favourite"
        android:icon="@drawable/ic_fav"
        />
    <item android:title="@string/faqs"
        android:id="@+id/faq"
        android:icon="@drawable/ic_faq"
        />
    <item android:title="@string/logout"
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        />
</group>
</menu>
