<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/food_app"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/enterME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:text="@string/enter_your_registered_mobile_number_and_email_bellow"
        android:textSize="19sp"
        android:layout_below="@+id/txtTitle"
        android:layout_marginStart="8dp"
        android:padding="3dp"
        android:layout_marginLeft="8dp" />
    <EditText
        android:id="@+id/etnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/mobile_number"
        android:textSize="20sp"
        android:layout_below="@+id/enterME"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawableStart="@drawable/ic_baseline_phone_android_24" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email"
        android:textSize="20sp"
        android:layout_below="@+id/etnumber"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:singleLine="true"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24" />
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="35dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:textStyle="italic" />

</RelativeLayout>
