<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity">
    <TextView
        android:id="@+id/enterOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enter_your_otp_and_reset_password"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:padding="3dp"
        android:layout_marginLeft="8dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center_horizontal" />
    <EditText
    android:id="@+id/etOTP"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:hint="@string/otp_4_characters"
    android:textSize="18sp"
    android:layout_below="@+id/enterOTP"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:singleLine="true"
    android:drawableStart="@drawable/ic_baseline_verified_user_24"
    android:drawableLeft="@drawable/ic_baseline_verified_user_24" />

    <EditText
        android:id="@+id/etNPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:textSize="18sp"
        android:layout_below="@+id/etOTP"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:singleLine="true"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24" />
    <EditText
        android:id="@+id/etNConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:textSize="18sp"
        android:layout_below="@+id/etNPassword"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:singleLine="true"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/etNConfirmPassword"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="italic" />

</RelativeLayout>
