<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        />

        <EditText
            android:autofillHints="Username"
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/username"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawableStart="@drawable/ic_baseline_person_24"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_email"
            android:textSize="18sp"
            android:layout_below="@+id/etUsername"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24" />
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/mobile_number_10_digits"
            android:textSize="18sp"
            android:layout_below="@+id/etEmail"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:singleLine="true"
            android:maxLength="10"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:drawableLeft="@drawable/ic_baseline_phone_android_24" />

        <EditText
            android:autofillHints="@string/delivery_address"
            android:id="@+id/etDeliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/delivery_address"
            android:textSize="18sp"
            android:layout_below="@+id/etMobileNumber"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawableLeft="@drawable/ic_baseline_location_on_24" />

        <EditText
            android:id="@+id/etNPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textSize="18sp"
            android:layout_below="@+id/etDeliveryAddress"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24" />
        <EditText
            android:id="@+id/etNConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:textSize="18sp"
            android:layout_below="@+id/etNPassword"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24" />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@+id/etNConfirmPassword"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textSize="18sp"
            android:textStyle="italic" />

    </RelativeLayout>

