<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="5dp"
    android:layout_margin="4dp">

    <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal"
               android:weightSum="6"
               >
        <TextView
                   android:id="@+id/serialNo"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_marginStart="8dp"
                   android:layout_marginLeft="8dp"
                   android:layout_marginTop="20dp"
                   android:layout_weight="1"
                   android:text="@string/sl_no"
                   android:textSize="20sp" />

               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="3.5"
                   android:baselineAligned="false">

                   <TextView
                       android:id="@+id/menuItem"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="6dp"
                       android:padding="3dp"
                       android:text="@string/menu_item"
                       android:textSize="18sp" />

                   <TextView
                       android:id="@+id/itemCost"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@id/menuItem"
                       android:padding="2.5dp"
                       android:text="@string/rs_500"
                       android:textSize="15sp" />
               </RelativeLayout>

               <Button
                   android:id="@+id/btnAdd"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="15dp"
                   android:layout_weight="1.5"
                   android:text="@string/add"
                   android:textSize="18sp" />
           </LinearLayout>
    <!--<RelativeLayout
        android:id="@+id/ProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >
        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>-->
</androidx.cardview.widget.CardView>
