<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="4dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="6.1">

        <ImageView
            android:layout_weight="1.8"
            android:id="@+id/resImage"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.1">

            <TextView
                android:id="@+id/resName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/restaurant_name"
                android:textSize="19sp"
                android:layout_marginTop="15dp"
                android:padding="3dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resCost"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resName"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/rs_300"
                android:padding="3dp"
                android:textSize="18sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_rating"
                android:drawableLeft="@drawable/ic_rating"
                android:text="@string/_4_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/heart"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/ic_baseline_favorite_border_24" />

        </LinearLayout>
      </LinearLayout>
</androidx.cardview.widget.CardView>
