<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_margin="4dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:layout_weight="1.8"
            android:id="@+id/resImage"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.2">

            <TextView
                android:id="@+id/resName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/restaurant_name"
                android:textSize="19sp"
                android:layout_marginTop="15dp"
                android:padding="3dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resCost"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resName"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/rs_300"
                android:padding="3dp"
                android:textSize="18sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/_4_5"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_rating"
                android:drawableStart="@drawable/ic_rating"
                />

           </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

